# RSuTPC

./: CMakeLists.txt  README.md  RSuTPC_G4p10.cc  g4env.sh
bench/: run_RSuTPC.sh  run_WuTPC.sh
data/cry_v1.7/: setup
data/cry_v1.7/root/: Makefile  setup.file  testRoot.C  testRoot_RSuTPC  testRoot_WuTPC
data/cry_v1.7/src/: .CRYAbsFunction.d  .CRYAbsParameter.d  .CRYCosLatitudeFunction.d  .CRYData.d  .CRYFunctionDict.d  .CRYGenerator.d  .CRYParameter.d  .CRYPrimary.d  .CRYPrimarySpectrumFunction.d  .CRYSetup.d  .CRYWeightFunc.d  .cry_fort.d
data/cry_v1.7/test/: test.root  testMain  testRoot
draw/: draw_spectra.C
include/: RSuTPCActionInitialization.hh  RSuTPCAnalysisManager.hh  RSuTPCDetectorConstruction.hh  RSuTPCEventAction.hh  RSuTPCMaterials.hh  RSuTPCPhysicsList.hh  RSuTPCPrimaryGeneratorAction.hh  RSuTPCRunAction.hh  RSuTPCRunActionMessenger.hh  RSuTPCSteppingAction.hh  RSuTPCTrackingAction.hh
macros/: preinit.mac
output/: RSuTPC_G4p10.root  WuTPC_G4p10.root
src/: RSuTPCActionInitialization.cc  RSuTPCAnalysisManager.cc  RSuTPCDetectorConstruction.cc  RSuTPCEventAction.cc  RSuTPCMaterials.cc  RSuTPCPhysicsList.cc  RSuTPCPrimaryGeneratorAction.cc  RSuTPCRunAction.cc  RSuTPCRunActionMessenger.cc  RSuTPCSteppingAction.cc  RSuTPCTrackingAction.cc
